--- a/survey/templates/index.html
+++ b/survey/templates/index.html
@@ -26,7 +26,7 @@
         
         
         <div class="flex-parent jc-center" style="padding: 10px;">
-        <button type="submit" class="btn btn-primary" onclick="location.href = 'survey'">Start Survey</button>
+        <button type="submit" class="btn btn-primary" onclick="location.href = 'survey?id=1'">Start Survey</button>
     </div>
              
          
