--- a/survey/templates/result2.html
+++ b/survey/templates/result2.html
@@ -14,6 +14,11 @@
         .margin-bottom {
           margin-bottom:15px;
       }
+      #c {
+        position: absolute;
+        right: -1px;
+
+} 
     </style>
      
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
@@ -26,17 +31,20 @@
  <body>
      <div class="container">
        <div class="row align-items-center">
-        <div width="50" height="50">
-        <canvas id="Polar" width="50" height="50"></canvas>
-      </div>
-    </div>
-  </div>
-  <br>
 
-  <br>
-        <div class="flex-parent jc-center" style="padding: 10px;">
-        <button type="submit" class="btn btn-primary" onclick="location.href = 'result2'">Next></button>
-    </div>
+
+      <div>
+        <canvas id="myChart" width="50" height="50"></canvas>
+      </div>
+      </div>
+     </div>
+<br>
+<br>
+        
+        <button type="submit" class="btn btn-primary" onclick="location.href = 'result'">  < Back </button>
+
+        <button type="submit" class="btn btn-primary" id="c" onclick="location.href = '/'">Restart</button>
+   
              
          
            
@@ -47,40 +55,42 @@
 
 
   
-<script>
 
+
+<script>
+  const labels = [
+    "Management",
+    'Problem Solve',
+  ];
 
   const data = {
-  labels: [
-    'Data Handling & Chance ',
-    'Space & Shape',
-    'Pattern & Relationship',
-    'Quantity & Number'
-  ],
-  datasets: [{
-    label: 'My First Dataset',
-    data: [{{dm_data}}, {{dm_space}}, {{dm_pattern}}, {{dm_quantity}}],
-    backgroundColor: [
-      'rgb(255, 99, 132)',
-      'rgb(75, 192, 192)',
-      'rgb(255, 205, 86)',
-      'rgb(54, 162, 235)'
-    ]
-  }]
+    labels: labels,
+    datasets: [{
+        barThickness: 300,
+      maxBarThickness: 100,
+      minBarLength: 5,
+      axis: 'y',
+      label: 'Affective Zone',
+      backgroundColor: 'rgb(255, 99, 132)',
+      borderColor: 'rgb(255, 99, 132)',
+      data: [{{am_manage}}, {{am_problem}}],
+    }]
+  };
+
+  const config = {
+  type: 'bar',
+  data,
+  options: {
+    indexAxis: 'y',
+  }
 };
 
-const config = {
-  type: 'polarArea',
-  data: data,
-  options: {}
-};
-
-const Polar = new Chart(
-    document.getElementById('Polar'),
+  const MyChart = new Chart(
+    document.getElementById('myChart'),
     config
   );
-</script> 
- 
+</script>
+
 
 
 
