--- a/survey/templates/index.html
+++ b/survey/templates/index.html
@@ -14,6 +14,13 @@
         .margin-bottom {
           margin-bottom:15px;
       }
+
+      #button{
+
+        width:50%;
+        margin-left:25%;
+        margin-right:25%;
+        }
     </style>
      
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
@@ -26,7 +33,7 @@
         
         
         <div class="flex-parent jc-center" style="padding: 10px;">
-        <button type="submit" class="btn btn-primary" onclick="location.href = 'survey?id=1'">Start Survey</button>
+        <button type="submit" id="button" class="btn btn-primary" onclick="location.href = 'survey?id=1'">Start Survey</button>
     </div>
              
          
