--- a/survey/templates/result.html
+++ b/survey/templates/result.html
@@ -26,8 +26,8 @@
  <body>
      <div class="container">
        <div class="row align-items-center">
-        <div width="50" height="50">
-        <canvas id="Polar" width="50" height="50"></canvas>
+        <div >
+        <canvas id="Polar" width=500 height= 500></canvas>
       </div>
     </div>
   </div>
@@ -72,7 +72,18 @@
 const config = {
   type: 'polarArea',
   data: data,
-  options: {}
+  options: {
+    maintainAspectRatio: false,
+    scales: {
+      r: {
+        max:5,
+        ticks: {
+          
+          stepSize: 1}
+      }
+      
+    }
+  }
 };
 
 const Polar = new Chart(
