--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
+  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,29 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel = stylesheet href = "{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
+
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'index' %}"><h2>Maths survey App</h2></a>
+          
+          <a href="{% url 'index' %}"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Flat_restart_icon.svg/1024px-Flat_restart_icon.svg.png" alt="Description for image" width="50" height="50"></a>
+          
 
-          </button>
+          
         </div>
       </nav>
 </body>
+
 <div class = container>
 {% block content %}
     
-{% endblock %}
+{% endblock content %}
     
 </div>
 
