--- a/survey/templates/result.html
+++ b/survey/templates/result.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -20,12 +21,14 @@
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    
-
+     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0/dist/chart.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
 </head>
  <body>
      <div class="container">
        <div class="row align-items-center">
+        <H2>Domain</h2>
         <div >
         <canvas id="Polar" width=500 height= 500></canvas>
       </div>
@@ -34,10 +37,7 @@
   <br>
 
   <br>
-        <div class="flex-parent jc-center" style="padding: 10px;">
-        <button type="submit" class="btn btn-primary" onclick="location.href = 'result2'">Next></button>
-    </div>
-             
+
          
            
          </div>
@@ -61,10 +61,10 @@
     label: 'My First Dataset',
     data: [{{dm_data}}, {{dm_space}}, {{dm_pattern}}, {{dm_quantity}}],
     backgroundColor: [
-      'rgb(255, 99, 132)',
-      'rgb(75, 192, 192)',
-      'rgb(255, 205, 86)',
-      'rgb(54, 162, 235)'
+      'rgb(255, 99, 132,0.6)',
+      'rgb(75, 192, 192,0.6)',
+      'rgb(255, 205, 86,0.6)',
+      'rgb(54, 162, 235,0.6)'
     ]
   }]
 };
@@ -75,6 +75,7 @@ const config = {
   options: {
     maintainAspectRatio: false,
     scales: {
+      
       r: {
         max:5,
         ticks: {
@@ -83,7 +84,8 @@ const config = {
       }
       
     }
-  }
+  },
+  plugins: [ChartDataLabels]
 };
 
 const Polar = new Chart(
@@ -95,6 +97,10 @@ const Polar = new Chart(
 
 
 
+ </body>
+
+ <body>
+  {% include 'result2.html' %}
  </body>
  </html>
 
