--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -2,13 +2,14 @@
 {% block content %}
 
 
-<h3 style = "margin-bottom: 20px"><strong>Pick Your Choice</strong></h3>
+<br>
 
 {% for x in qs %}
 <h4>{{x.question}}</h4>
 <br>
 
 <form method="POST" action='/survey?id={{id}}'">
+   
     {% csrf_token %}
    
     <ul class="list-group" style="margin:0px">
@@ -36,7 +37,7 @@
     <submit type="submit" class="btn btn-primary" onclick="location.href='result'"  name="radio">Submit</submit>
 
     {% else %}
-    <input type="submit" class="btn btn-primary" >
+    <input type="submit" class="btn btn-primary" style="position: fixed; bottom: 3%;" >
     
     {% endif %}
     {% endfor %}
