--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -12,7 +12,74 @@
     <link rel = stylesheet href = "{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <style>
+      *,
+      *:after,
+      *:before{
+          box-sizing: border-box;
+      }
+      
+      body{
+          margin:0;
+          padding: 0;
+          font-family: "Inter", sans-serif;
+          color: #000021;
+          font-size: 15px;
+          background-color: #e6e6ef;
+      }
+      
+      
 
+      
+      label{
+          display: block;
+          cursor: pointer;
+          font-weight: 500;
+          margin-bottom: 10px;
+      }
+      
+      label span{
+          display: inline-flex;
+          align-items: center;
+          padding: 10px 20px 10px 10px;
+          border-radius: 31px;
+          transition: .25s ease;
+      }
+      
+      label span:hover,
+      input[type="radio"]:checked + span{
+          background-color: #d6d6e5;
+      }
+      
+      label span:before{
+          content: "";
+          background-color: #fff;
+          width: 42px;
+          height: 42px;
+          border-radius: 50%;
+          margin-right: 10px;
+          transition: .25s ease;
+          box-shadow:  inset 0 0 0 2px #00005c;
+      }
+      
+      input[type="radio"]:checked + span:before{
+          box-shadow: inset 0 0 0 10px #00005c;
+      }
+
+      .row{
+        min-height: 500px;
+    }
+    .margin-bottom {
+      margin-bottom:15px;
+  }
+
+  #button{
+
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
+    }
+  </style>
 
     
 </head>
