--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -5,22 +5,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <head>
 <body>
+
 <br>
 
 {% for x in qs %}
-<h4>{{x.question}}</h4>
+<h5>{{x.question}}</h5>
+
 <br>
 
     <form method="POST" action='/survey?id={{id}}'">
     
         {% csrf_token %}
     
-        <ul class="list-group" style="margin:0px">
+        <ul class="list-group" id="fixed" >
         
         
             <label>
@@ -31,7 +31,6 @@
                     <input class="form-check-input me-1" type="radio" name = "radio" value=4 aria-label="..."> About once a week</input><br><br>
                     <input class="form-check-input me-1" type="radio" name = "radio" value=5 aria-label="..."> About Everyday</input><br><br>
                     <input class="form-check-input me-1" type="radio" name = "radio" value=0 aria-label="..."> Don't Understand the Question</input><br><br>
-
                 </li>
             </label>
         
@@ -41,16 +40,18 @@
         <br>
         <br>
 
+
         {% if id == 34 %}
         <submit type="submit" class="btn btn-primary" onclick="location.href='result'"  name="radio">Submit</submit>
 
         {% else %}
-        <input type="submit" class="btn btn-primary" style="position: fixed; bottom: 3%;" >
+        <input type="submit" class="btn btn-primary" id="sbtn" >
         
         {% endif %}
         {% endfor %}
 
     </form>
+    
 </body>
 
 {% endblock %}
