--- a/survey/templates/result.html
+++ b/survey/templates/result.html
@@ -18,7 +18,6 @@
       }
     </style>
      
-    
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    
@@ -28,24 +27,19 @@
 </head>
  <body>
   <br>
-     <div class="container">
-       <div class="row align-items-center">
+    <div class="container">
+      <div class="row align-items-center">
+
         <H2>Domain</h2>
-        <div >
-        <canvas id="Polar" width=500 height= 500></canvas>
+
+          <div >
+          <canvas id="Polar" width=500 height= 500></canvas>
+          </div>
+
       </div>
     </div>
-  </div>
   <br>
-
   <br>
-
-         
-           
-         </div>
-       </div>
-  
-       
 
 
   
@@ -77,12 +71,12 @@ const config = {
   options: {
     maintainAspectRatio: false,
     scales: {
-      
       r: {
         max:5,
         ticks: {
-          
-          stepSize: 1}
+          stepSize: 1,
+          display: false
+        }
       }
       
     }
@@ -96,14 +90,11 @@ const Polar = new Chart(
   );
 </script> 
  
-
-
-
  </body>
 
- <body>
-  {% include 'result2.html' %}
- </body>
+
+{% include 'result2.html' %}
+
  </html>
 
 {% endblock %}
