--- a/survey/templates/result2.html
+++ b/survey/templates/result2.html
@@ -1,19 +1,16 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+
     <style>
-        .row{
-            min-height: 500px;
-        }
-        .margin-bottom {
-          margin-bottom:15px;
+      .row{
+          min-height: 500px;
+      }
+      .margin-bottom {
+        margin-bottom:15px;
       }
       #c {
         position: absolute;
@@ -32,13 +29,14 @@
  <body>
      <div class="container">
        <div class="row align-items-center">
+        
         <h2>Affective Zone</h2>
-        <br/>
+          
+          <br/>
 
-      <div>
-
-        <canvas id="myChart" width="600" height="400"></canvas>
-      </div>
+          <div>
+          <canvas id="myChart" width="600" height="400"></canvas>
+          </div>
       </div>
      </div>
         <br>
@@ -46,41 +44,51 @@
       <button type="submit" class="btn btn-primary" id="c" onclick="location.href = '/'">Restart</button>  
         <br>
         <br>  
-         </div>
-         <br>
-         <br>
-       </div>
-       <br>
-       <br>
-       
-
-
-  
-
+        <br>
+        <br>
+        <br>
+        <br>
 
 <script>
   const labels = [
-    "Management",
+    "Managment",
     'Problem Solve',
   ];
 
   const data1 = {
     labels: labels,
     datasets: [{
-        barThickness: 300,
+      label: 'Manage a Mathematics Containing Situation', 
+    
+      barThickness: 300,
       maxBarThickness: 100,
       minBarLength: 5,
       axis: 'y',
-      label: 'Manage a Mathematics Containing Situation',
       
       backgroundColor: [
-      'rgb(0, 51, 204,0.8)',
-      'rgb(102, 153, 0,0.8)'
-      
+      'rgb(0, 51, 204,0.8)'
+ 
     ],
-      borderColor: 'rgb(102, 153, 0,0.8)',
-      data: [{{am_manage}}, {{am_problem}}],
-    }]
+     
+      data: [{{am_problem}},{{am_manage}}],
+    },
+    {
+      label: 'Problem Solve', 
+    
+      barThickness: 300,
+      maxBarThickness: 100,
+      minBarLength: 5,
+      axis: 'y',
+      
+      backgroundColor: [
+      'rgb(102, 153, 0,0.8)'
+ 
+    ],
+     
+      data: [{{am_problem}},{{am_manage}} ],
+    }
+
+    ]
   };
 
   const config1 = {
@@ -112,9 +120,6 @@
    
   );
 </script>
-
-
-
 
  </body>
  </html>
