--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -18,37 +18,37 @@
       *:before{
           box-sizing: border-box;
       }
-      
+
       body{
-          margin:0;
-          padding: 0;
-          font-family: "Inter", sans-serif;
-          color: #000021;
-          font-size: 15px;
-          background-color: #e6e6ef;
-      }
-      
-
-
- 
-
-
-      input[type="radio"]:checked + span:before{
-          box-shadow: inset 0 0 0 10px #00005c;
-      }
-
-      .row{
-        min-height: 500px;
+        margin:0;
+        padding: 0;
+        font-family: "Inter", sans-serif;
+        color: #000021;
+        font-size: 15px;
+        background-color: #e6e6ef;
     }
-    .margin-bottom {
-      margin-bottom:15px;
+    
+    .row{
+      min-height: 500px;
   }
+  .margin-bottom {
+    margin-bottom:15px;
+}
+
+
 
   #button{
 
     width:50%;
     margin-left:25%;
     margin-right:25%;
+    }
+
+    #next{
+      width:50%;
+      margin-left:25%;
+      margin-right:25%;
+
     }
   </style>
 
