--- a/survey/templates/index.html
+++ b/survey/templates/index.html
@@ -13,11 +13,25 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
  </head>
  <body>
-     <div class="container">
-       <div class="row align-items-center">
+     <div class="container"> 
+        <br> 
+        <br>
+        <br>      
+        <h5 style="color:#4d4d4d">Thank you for taking our Survey. We think it will show you how often you use maths.</5>
+            <br>
+        <h5 style="color:#4d4d4d">Please select the option that is closest to your situation.</5>
+        <br>
+        <br>
+        <br>
+        <br>
+    
+       <div style= "position: center; bottom 50%">
         
         
-        <div class="flex-parent jc-center" style="padding: 10px;">
+        <div class="flex-parent jc-center" style="padding: 1px;">
+
+
+
         <button type="submit" id="button" class="btn btn-primary" onclick="location.href = 'survey?id=1'">Start Survey</button>
     </div>
              
