--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -385,7 +385,7 @@
 
 <br>
 <div id="fixed">
-    <form method="POST" action='/survey?id={{id}}'">
+    <form method="POST" action='/survey?id={{id}}'>
     
         {% csrf_token %}
     
