--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -35,7 +35,86 @@
     margin-bottom:15px;
 }
 
+@media (prefers-color-scheme: dark) {
 
+
+
+  
+  body{
+    
+      margin:0;
+      padding: 0;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+      font-size: 18px;
+      background-color: #000000;
+  }
+
+  #li{
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+      font-size: 18px;
+      background-color: #212529;
+  }
+
+  label span:hover,
+  input[type="radio"]:checked + span{
+      background-color: #818181;
+  }
+
+  label span:before{
+      content: "";
+      background-color: #ffff;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      margin-right: 10px;
+      transition: .25s ease;
+      box-shadow:  inset 0 0 0 1px #6b6b6b;
+  }
+
+  input[type="radio"]:checked + span:before{
+      box-shadow: inset 0 0 0 5.5px #6b6b6b;
+  }
+
+  #button{
+
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
+    background-color: #6b6b6b;
+    font-family: "Inter", sans-serif;
+    color: #ffff;
+    }
+
+    #sbtn{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+    #c{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+    #d{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+    #txt{
+      "color:#737373"
+    }
+  
+
+  }
+
+  #txt{
+    "color:#4d4d4d"
+  }
 
   #button{
 
