--- a/survey/templates/result2.html
+++ b/survey/templates/result2.html
@@ -1,14 +1,155 @@
-{% extends 'base.html' %}
-{% block content %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maths survey</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <style>
+      *,
+      *:after,
+      *:before{
+          box-sizing: border-box;
+      }
+
+      body{
+        margin:0;
+        padding: 0;
+        font-family: "Inter", sans-serif;
+        color: #000021;
+        font-size: 15px;
+        background-color: #e6e6ef;
+    }
+    
+    .row{
+      min-height: 500px;
+  }
+  .margin-bottom {
+    margin-bottom:15px;
+}
+#c {
+  position: sticky;
+  
+  
+} 
+
+#d {
+  position: sticky;
+  left: 88%;
+  
+}
+
+      
+@media only screen and (max-width: 800px) {
+  #div { 
+    width: 93%; 
+    margin-left:4%;
+  
+}}
+@media only screen and (max-width: 800px) {
+  #div1 { 
+    width: 98%;
+  
+}}
+
+@media (prefers-color-scheme: dark) {
+
+
+
+  
+  body{
+    
+      margin:0;
+      padding: 0;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+      font-size: 18px;
+      background-color: #000000;
+  }
+
+
+  #button{
+
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
+    background-color: #6b6b6b;
+    font-family: "Inter", sans-serif;
+    color: #ffff;
+    }
+
+    #sbtn{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+    #c{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+    #d{
+
+      background-color: #6b6b6b;
+      font-family: "Inter", sans-serif;
+      color: #ffff;
+    }
+  
+
+
+
+  #txt{
+    "color:#4d4d4d"
+  }
+
+  #button{
+
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
+    }
+
+    #next{
+      width:50%;
+      margin-left:25%;
+      margin-right:25%;
+
+    }
+
+
+
+
+
+
+
+
+
+
+      @media (prefers-color-scheme: dark) {
+
+
+
+  
+        body{
+          
+            margin:0;
+            padding: 0;
+            font-family: "Inter", sans-serif;
+            color: #ffff;
+            font-size: 18px;
+            background-color: #2c3136;
+        }
+
+      }
       .row{
           min-height: 500px;
       }
@@ -44,16 +185,8 @@
         background-color: white;
         border-color: #333333;
       }
-      #c {
-        position: absolute;
-        left: 10%;
-        right: 58%;
-      } 
-      #d {
-        position: absolute;
-        left: 58%;
-        right: 10%;
-      } 
+
+
     </style>
      
   
@@ -64,43 +197,31 @@
 
 </head>
  <body>
-     <div class="container">
-       <div class="row align-items-center">
+     
+       
         
-        <h5>Affective Zone</h5>
-          
-          <br/>
-
-          <div>
-          <canvas id="myChart" width="600" height="400"></canvas>
-          </div>
+<div class="container">
+        
+        <center><h2 style ="margin-top:5%;">Affective Zone</h2></center> 
+        <div id="div1">
+        <canvas id="myChart" width="600" height="300"></canvas>
+        </div>
+        <br>
+     
+      <div id = "div">
+        
+        {% include  'feedback.html' %}
+              <br>
+               
+              <button type="submit" class="btn btn-primary" id="c" onclick="location.href = '/'">restart</button>  
+              <br><br>
       </div>
-     </div>        
-     <br>
-     <br>
-     <br>
-
-     <h6 style="color:#4d4d4d">Please share your feedback.</h6>
-     <br>
-     <textarea class="textarea" placeholder="Enter a message..."></textarea>
-     <button type="submit" class="btn btn-primary" style="background-color:#0202ff"  > Send </button>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <button type="submit" class="btn btn-primary" id="d" onclick="location.href = '/'">Restart</button>  
-        <button type="submit" class="btn btn-primary" id="c" onclick="location.href = '/result'"> < back </button>  
-
-        <br>
-        <br>  
-        <br>
-
+  
 
 <script>
   const labels = [
-    "Managment",
-    'Problem Solve',
+    "",
+    '',
   ];
 
   const data1 = {
@@ -108,8 +229,8 @@
     datasets: [{
       label: 'Manage a Mathematics Containing Situation', 
     
-      barThickness: 300,
-      maxBarThickness: 100,
+      barThickness: 200,
+      maxBarThickness: 80,
       minBarLength: 5,
       axis: 'y',
       
@@ -121,10 +242,10 @@
       data: [{{am_problem}},{{am_manage}}],
     },
     {
-      label: 'Problem Solve', 
+      label: 'Problem Solve                                               ', 
     
-      barThickness: 300,
-      maxBarThickness: 100,
+      barThickness: 235,
+      maxBarThickness: 83,
       minBarLength: 5,
       axis: 'y',
       
@@ -143,6 +264,21 @@
   type: 'bar',
   data:data1,
   options: {
+
+    plugins: {
+      legend: {
+          display: true,
+          position: 'top',
+          labels: {
+              color: '#007CF7',
+              font: {
+                size: 11
+            }
+          }
+      }
+  },
+
+
     maintainAspectRatio: false,
     devicePixelRatio: 1,
     indexAxis: 'y',
@@ -172,4 +308,3 @@
  </body>
  </html>
 
- {% endblock %}
