dark mode commit

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -13,7 +13,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/basestyle.css">
-   
+    <link rel="icon" href="https://icon-library.com/images/m-icon-png/m-icon-png-23.jpg" type="image/x-icon">
     <style>
 
 
