--- a/survey/templates/feedback.html
+++ b/survey/templates/feedback.html
@@ -46,7 +46,8 @@
     </style>
 
 <body>
-<h6 id="txt">Please share your feedback.</h6>
+<h6 id="txt">These measures indicate how often you use of maths in general</h6>
+<h6 id="txt" >Please share your feedback.</h6>
 
 <form method="POST" action='/feedback'>
   
