--- a/survey/templates/index.html
+++ b/survey/templates/index.html
@@ -16,12 +16,11 @@
  </head>
  <body>
      <div class="container"> 
-        <center><h2 style ="margin-top:6%; margin-bottom:5%;">Welcome</h2></center> 
+        <center><h2 style ="margin-top:6rem; margin-bottom:2rem;">Welcome</h2></center> 
 
         <h5 id="txt">Thank you for taking our Survey. We think it will show you how useful maths is in your life.</5>
             <br>
-        <h5 id="txt">Please think about your work and hobbies when reading each question and select the most relevant option to you.</5>
-        <br>
+        <h5 id="txt">Please think about your work and hobbies when reading each question and select the option that is most relevant to you.</5>
         <br>
         <br>
         <br>
