--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="color-scheme" content="light only">
     <meta name=generator content="Frontweaver 8.2">
     <meta name="keywords" content="british,type face,font,fonts,highway,highways">
-    <title>You and Maths</title>
+    <title>You and Mathematics</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/basestyle.css">
@@ -107,7 +107,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           
-          <a class="navbar-brand" href="{% url 'index' %}"><h3>You and Maths</h3></a>
+          <a class="navbar-brand" href="{% url 'index' %}"><h3>You and Mathematics</h3></a>
           
         </div>
     </nav>
