--- a/survey/templates/result2.html
+++ b/survey/templates/result2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You and Maths</title>
+  <title>You and Mathematics</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="icon" href="https://icon-library.com/images/m-icon-png/m-icon-png-23.jpg" type="image/x-icon">
@@ -183,23 +183,11 @@
            
         <div id = "div"> 
           {% include  'feedback.html' %}
-          <br>
-          <button type="submit" class="btn btn-primary" id="c" onclick="location.href = '/'">restart</button>  
+          
+          <button type="submit" class="btn btn-primary" id="c" style = 'margin-top:4%;' onclick="window.location.href= 'https://www.google.com/'">restart</button>  
           <br><br>
         </div>
   
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <script>
