--- a/survey/templates/result2.html
+++ b/survey/templates/result2.html
@@ -184,7 +184,7 @@
         <div id = "div"> 
           {% include  'feedback.html' %}
           
-          <button type="submit" class="btn btn-primary" id="c" style = 'margin-top:4%;' onclick="window.location.href= 'https://www.google.com/'">restart</button>  
+          <button type="submit" class="btn btn-primary" id="c" style = 'margin-top:4%;' onclick="window.location.href= 'https://www.google.com/'">Close</button>  
           <br><br>
         </div>
   
